--- a/index.Rmd
+++ b/index.Rmd
@@ -96,3 +96,27 @@ data %>%
     plot.subtitle = element_text(size = 10),
     plot.caption = element_text(face = "italic"))
 ```
+
+```{r}
+# for race, convert numerical variable to categorical variable
+wage <- data %>% mutate(black = as.factor(black))
+```
+
+\newpage
+#Graph3
+
+```{r}
+#1 differences in wage by race at the same level of education
+ggplot(data = wage, mapping = aes(x = educ, y = wage, fill = black))+
+  geom_bar(stat = "identity", position = "dodge", width = 0.8)+
+  scale_x_continuous(breaks = seq(0,22, by = 1))+
+  scale_y_continuous(breaks = seq(0,21, by = 2))+
+  scale_fill_discrete(name = "Race",
+                    breaks = c("0", "1"),
+                    labels = c("White", "Black"))+
+  labs(title = "Would race affect wage at the same level of education?",
+       subtitle = "With the same number of years of education, \nwhites earn higher hourly wage than blacks.",
+       x = "Years of Education",
+       y = "Hourly Wage",
+       caption = "Source: https://davidcard.berkeley.edu/data_sets.html")
+```
