--- a/index.Rmd
+++ b/index.Rmd
@@ -2,12 +2,149 @@
 title: "Assignment04"
 author: "Pataranan Srikarn & Ruijia Zhao"
 date: "2/22/2022"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
+
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(message = FALSE)
+knitr::opts_chunk$set(warning = FALSE)
 ```
 
-The graphs below use the data set from [Center for Labor Economics
+```{r include = FALSE}
+def.chunk.hook  <- knitr::knit_hooks$get("chunk")
+knitr::knit_hooks$set(chunk = function(x, options) {
+  x <- def.chunk.hook(x, options)
+  ifelse(options$size != "normalsize", paste0("\n \\", options$size,"\n\n", x, "\n\n \\normalsize"), x)
+})
+
+```
+
+
+The graphs below use the data set from [The Center for Labor Economics
 Department of Economics](https://davidcard.berkeley.edu/data_sets.html)
+
+
+```{r, message=FALSE}
+library(haven)
+data <- read_dta("/Users/mospatar/assignment04/data/CARD.dta")
+library(ggplot2)
+library(tidyverse)
+data <- data %>%
+  mutate(wage = wage/100)
+cat_educ <- as.factor(ifelse(data$educ < 7, "Elementary School or Less",
+                             ifelse(data$educ < 13, "Middle School",
+                                    "College or more")))
+```
+
+<details>
+<summary>Would race affect wage at the same level of education?</summary>
+```{r}
+# for race, convert numerical variable to categorical variable
+wage <- data %>% mutate(black = as.factor(black))
+```
+
+```{r}
+#1 differences in wage by race at the same level of education
+ggplot(data = wage, mapping = aes(x = educ, y = wage, fill = black))+
+  geom_bar(stat = "identity", position = "dodge", width = 0.8)+
+  scale_x_continuous(breaks = seq(0,22, by = 1))+
+  scale_y_continuous(breaks = seq(0,21, by = 2))+
+  scale_fill_discrete(name = "Race",
+                    breaks = c("0", "1"),
+                    labels = c("White", "Black"))+
+  labs(title = "Would race affect wage at the same level of education?",
+       subtitle = "With the same number of years of education, \nwhites earn higher hourly wage than blacks.",
+       x = "Years of Education",
+       y = "Hourly Wage",
+       caption = "Source: https://davidcard.berkeley.edu/data_sets.html")
+```
+</details>
+
+\newpage
+<details>
+<summary>How soon can people with low educaitonal attainment keep up their wages with others?</summary>
+
+```{r}
+# Wage difference by working experience
+data %>%
+  ggplot() +
+  geom_jitter(mapping = aes(x = exper, y = wage, color = factor(cat_educ), stroke = 1.5), alpha = 1/3) +
+  geom_label(label="College or more", 
+    x=8,
+    y=15,
+    label.size = 0.05,
+    color = "steelblue4",
+    aes(fontface = "italic")) +
+  geom_label(label="Middle School", 
+             x=12,
+             y=11,
+             label.size = 0.05,
+             color = "red2",
+             aes(fontface = "italic")) +
+  geom_label(label="Elementary School or Less", 
+             x=17.5,
+             y=6,
+             label.size = 0.05,
+             color = "olivedrab4",
+             aes(fontface = "italic")) +
+  geom_hline(yintercept=5) +
+  theme_minimal() +
+  theme(legend.position = "none") +
+  labs(title = "How soon can people with low educaitonal attainment keep up their wages with others?",
+       subtitle = "It takes almost 10 years for people with less than 10 years of schooling to get paid $5/hour compared to those with more than 15 years of schooling.",
+       caption = "Source: https://davidcard.berkeley.edu/data_sets.html",
+       x = "Years of Working",
+       y = "Hourly Wage")
+```
+</details>
+
+\newpage
+<details>
+<summary>Do people with higher knowledge of world work score earn more?</summary>
+```{r}
+#2 relationship between kww score and wage by education background
+ggplot(data = wage, mapping = aes(x = kww, y = wage, color = cat_educ))+
+  geom_point(alpha = 0.85, shape = 18)+
+  geom_smooth(span = 1.2, se = FALSE)+
+  scale_x_continuous(breaks = seq(0,56, by = 4))+
+  scale_y_continuous(breaks = seq(0,22, by = 2))+
+  scale_color_discrete(name = "Education Level",
+                       limits = c("Elementary School or Less", "Middle School", "College or More"))+
+  labs(title = "Do people with higher knowledge of world work score earn more? ",
+       subtitle = "Hourly wage is positively associated with people's KWW Score, \nbut this relationship is not significant for those with elementary school diploma or lower.",
+       x = "Knowledge of World Work Score",
+       y = "Hourly Wage",
+       caption = "Source: https://davidcard.berkeley.edu/data_sets.html")
+```
+</details>
+
+\newpage
+<details>
+<summary>Do people living near 4-year college have a higher wage?</summary>
+
+```{r}
+cat_nearc4 <- as.factor(ifelse(data$nearc4 == 1, 'Live near 4-year college', 'Live far from 4-year college'))
+data %>%
+  ggplot(aes(x=wage, fill=cat_nearc4, color=cat_nearc4)) +
+  geom_density(position="identity", alpha=0.5) +
+  geom_vline(aes(xintercept = 5),col='black',size = 0.5, linetype = 2) +
+  geom_text(x=8.5, y=0.17, label="Live far from 4-year college", size = 4, color = 'firebrick3') +
+  geom_text(x=10.5, y=0.12, label="Live near 4-year college", size = 4, color = 'darkcyan') +
+  theme_minimal() +
+  theme(legend.position = "none") +
+  labs(title = "Do people living near 4-year college have a higher wage?",
+       subtitle = "People living near universities may have more opportunities and connections to get into highly-paid companies.\nAlso, they could also already be wealthy people, for area around universities are typcially expensive.\nThe graph below shows that there's more percentage of people who live near 4-year college at the horly wage of $5 and above, vice versa.",
+       caption = "Source: https://davidcard.berkeley.edu/data_sets.html",
+       x = "Hourly Wage") +
+  theme(plot.title = element_text(size = 16, face = "bold"),
+    plot.subtitle = element_text(size = 10),
+    plot.caption = element_text(face = "italic"))
+```
+</details>
+
+
+\newpage
+![Stretch Exercise](/Users/mospatar/assignment04/successful set up.jpeg)
